# libvmi

./: .gitignore  .gitmodules  .mailmap  CMakeLists.txt  SharemindLibVmiConfig.cmake.in  SharemindLibVmiConfigVersion.cmake.in  SharemindLibvmiConfig.cmake.in
src/: instr.c  instr.cpp  instr.h
src/libsmvmi/: instr.c  instr.h  libsmvmi.pro
src/sharemind/: CMakeLists.txt  SharemindLibvmiConfig.cmake.in  SharemindLibvmiConfigVersion.cmake.in
src/sharemind/libsmvmi/: instr.c  instr.h
src/sharemind/libvmi/: instr.c  instr.h
